--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <footer>
     <div class="attribution">
-      Coded by <a href="#">Pradeep Sahu</a>.
+      Coded by <a href="https://github.com/Pradeep743">Pradeep Sahu</a>.
     </div>
   </footer>
 </body>
